Add user controller ftests